# sdl2-example

./: CMakeLists.txt  README.md  create_window.cpp  create_window.h  load_bmp.cpp  load_bmp.h  main.cpp  random_yuv.cpp  random_yuv.h  read_file_player_yuv.cpp  read_file_player_yuv.h  sdl_2_event.cpp  sdl_2_event.h  sdl_audio.cpp  sdl_audio.h  sdl_base.cpp  sdl_base.h  show_image.cpp  show_image.h  sound_mixer.cpp  sound_mixer.h
